<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="title_activity_photos">Search</string>
    <string name="login_label">Log in</string>
    <string name="search">Search</string>
    <string name="search_hint">...</string>
    <string name="sort">Sort</string>
    <string name="add_new">Add New</string>
    <string name="phone_number">Phone number</string>
    <string name="price">Price</string>
    <string name="email">Email</string>
    <string name="entry_created">Entry created!</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_entry">Add new entry</string>
    <string name="entry_already_exists">An entry like that already exists</string>
    <string name="phone_number_label">Nr:</string>
    <string name="phone_number_price_label">Price:</string>
    <string name="phone_number_owner_label">\@:</string>
    <string name="phone_number_word_label">Word:</string>

</resources>