<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/phone_number_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/phone_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:lines="1"
        android:text="@string/phone_number_label" />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_toRightOf="@id/phone_number_text"
        android:lines="1" />

    <TextView
        android:id="@+id/phone_number_word_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_toRightOf="@id/phone_number"
        android:lines="1"

        android:text="@string/phone_number_word_label" />

    <TextView
        android:id="@+id/phone_number_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_toRightOf="@id/phone_number_word_text"
        android:lines="1" />

    <TextView
        android:id="@+id/phone_number_price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_number"
        android:layout_margin="10dp"
        android:lines="1"
        android:text="@string/phone_number_price_label" />

    <TextView
        android:id="@+id/phone_number_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_number"
        android:layout_margin="10dp"
        android:layout_toRightOf="@id/phone_number_price_text"
        android:ellipsize="end"
        android:lines="1" />

    <TextView
        android:id="@+id/phone_number_owner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_number"
        android:layout_margin="10dp"
        android:layout_toRightOf="@id/phone_number_price"
        android:lines="1"
        android:text="@string/phone_number_owner_label" />

    <TextView
        android:id="@+id/phone_number_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_number"
        android:layout_margin="10dp"
        android:layout_toRightOf="@id/phone_number_owner_text"
        android:ellipsize="end"
        android:lines="1" />

</RelativeLayout>